--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="center_background">
         <h1 class="physmarch_header">Physmarch</h1>
     </div>
-    <section id="About" style="padding-top: 100%;">
+    <div style="padding-top: 100%;"></div>
+    <section id="About" >
         <h1>About</h1>
         <p style="color:white; padding-left:20px">
             This is just a project to show out projects to the world... We don't have projects that work on web yet.
