--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
         <a>Home</a>
         <a href="#About">About</a>
         <a>Download</a>
-        <a href="wikipedia.org">Wiki</a>
+        <a href="https://wikipedia.org">Wiki</a>
     </div>
-    <div class="center_background">
-        <h1 class="physmarch_header">Physmarch</h1>
+    <div class="logo_space">
+        <div class="center_background">
+            <h1 class="physmarch_header">Physmarch</h1>
+        </div>
     </div>
-    <div style="padding-top: 100%;"></div>
+    <h1 style="text-align: center; color: lime;">Our games</h1>
+    <div class="game_links">
+        <a href="sfs.html">doesn't have a name yet</a>
+    </div>
     <section id="About" >
         <h1>About</h1>
         <p style="color:white; padding-left:20px">
