fixed page linkages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <h1 style="text-align: center; color: lime;">Our games</h1>
     <div class="game_links">
-        <a href="sfs.html">doesn't have a name yet</a>
+        <a href="sfs">doesn't have a name yet</a>
     </div>
     <section id="About" >
         <h1>About</h1>
