--- a/sfs.html
+++ b/sfs.html
@@ -7,7 +7,7 @@
         <title>physmarch</title>
     </head>
     <body style="background-color: black; font-family: monospace;">
-        <a href="index.html" style="color: greenyellow; text-decoration: none; font-size: 200%; letter-spacing: 2px;" font-size:200%; letter-spacing: 5px;>Physmarch</a>
+        <a href="../" style="color: greenyellow; text-decoration: none; font-size: 200%; letter-spacing: 2px;" font-size:200%; letter-spacing: 5px;>Physmarch</a>
         <p style="color: white;">This a test page for a game... nothing to see here yet.</p>
     </body>
 </html>
